--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "content-type": "^1.0.5",
     "numeral": "^2.0.6",
     "react": "^18.2.0",
+    "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
     "react-redux": "^9.0.4",
     "react-router-dom": "^6.19.0",
