--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "redux-persist": "^6.0.0",
     "redux-typescript": "^1.2.1",
     "styled-components": "^6.1.1",
+    "swiper": "^11.0.5",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
