--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "lodash": "^4.17.21",
     "numeral": "^2.0.6",
     "react": "^18.2.0",
+    "react-daum-postcode": "^3.1.3",
     "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
     "react-redux": "^9.0.4",
